--- a/oplan/templates/oplan/infoscreen.html
+++ b/oplan/templates/oplan/infoscreen.html
@@ -1,4 +1,8 @@
 {% extends 'oplan/header.html' %}
+{% block extrahead %}
+{{block.super}}
+<script src="/static/oplan/masonry.pkgd.min.js"></script>
+{% endblock %}
 {% block breadcrumbs %}
   {% if not beamer %}
   <div class="breadcrumbs">
