--- a/oplan/templates/oplan/infoscreenbeamer.html
+++ b/oplan/templates/oplan/infoscreenbeamer.html
@@ -3,8 +3,10 @@
 <title>InfoScreen Beamer Oplan KIF Verwaltung Hilfe Ich Bin In Einer HTML Template Fabrik gefangen</title>
 <meta http-equiv="refresh" content="60">
 <meta name="viewport" content="width=device-width">
+<link rel=stylesheet href="/static/frontend/vendor/font-awesome/css/font-awesome.css">
 <script src="/static/oplan/vendor/jquery/dist/jquery.min.js"></script>
 <script src="/static/oplan/vendor/moment/min/moment.min.js"></script>
+<script src="/static/oplan/masonry.pkgd.min.js"></script>
 <style>
 body {background: #111; color: #eee; }
 body,td { font-size: 8pt; font-family: Helvetica,sans-serif; }
