--- a/oplan/templates/oplan/infoscreencontent.html
+++ b/oplan/templates/oplan/infoscreencontent.html
@@ -1,9 +1,25 @@
-<div class="dashbox">
-<h2 align=center><big>{{now|date:"l"}}</big> {{now}}</h2>
-</div>
-<div class="dashbox">
-<h2 id="countdown" align=center></h2>
-</div>
+<div class="col-md-4">
+
+<div class="dashbox"><span class="di fa fa-clock-o"></span>
+<h2 ><big>{{now|date:"l"}} &middot; {{now|date:"H:i"}} Uhr</big> {{now}}</h2>
+</div><!-- /dashbox -->
+
+<div class="dashbox"><span class="di fa fa-globe"></span>
+<h2 >Alle Infos online unter <big>kif.d120.de</big></h2>
+</div><!-- /dashbox -->
+
+
+{% for item in latest_news %}
+<div class="dashbox news-item" style="background-color: {{item.red}};color:white"><span class="di fa fa-newspaper-o"></span>
+<h2><big>{{item.title}}</big> {{item.content_text|truncatewords:15}}</h2>
+<aside>Veröffentlicht von {{item.author}} am {{item.published_date|date:'d. M Y'}} um {{item.published_date|date:'H:i'}} Uhr </aside>
+
+</div><!-- /dashbox -->
+{% endfor %}
+
+<div class="dashbox"><span class="di fa fa-pagelines"></span>
+<h2 id="countdown" ></h2>
+</div><!-- /dashbox -->
 <script>
 function updCtd(){
     var dur = moment.duration(moment("2016-05-04 15:00:00") - moment());
@@ -11,60 +27,67 @@ function updCtd(){
 setInterval(updCtd,5000);
 updCtd();
 </script>
+
+</div><!-- / col -->
+<div class="col-md-4">
+
 <div class="dashbox">
 <h2>Gerade stattfindende AKs</h2>
 
 {% for akt in current_akts %}
-<div class="ak">
+<div class="ak" style="background-color: {{akt.red}};">
     <time>{{ akt.start_time|date:"G" }}<small><u>{{ akt.start_time|date:"i" }}</u></small></time>
     <span>{{ akt.room.number }}</span>
     <div>
         <h3>{{ akt.ak.titel }}</h3>
-        <p>{{ akt.ak.beschreibung|truncatewords:15 }}</p>
     </div>
 </div>
 {% endfor %}
-</div>
+</div><!-- /dashbox -->
+
+
+</div><!-- / col -->
+<div class="col-md-4">
+
 
 <div class="dashbox">
 <h2>In den nächsten zwei Stunden beginnende AKs</h2>
 
 
 {% for akt in upcoming_akts %}
-<div class="ak">
+<div class="ak" style="background-color: {{akt.red}};">
     <time>{{ akt.start_time|date:"G" }}<small><u>{{ akt.start_time|date:"i" }}</u></small></time>
-    <span>{{ akt.room.number }}</span>
+    <span >{{ akt.room.number }}</span>
     <div>
         <h3>{{ akt.ak.titel }}</h3>
-        <p>{{ akt.ak.beschreibung|truncatewords:15 }}</p>
     </div>
 </div>
 {% endfor %}
-</div>
+</div><!-- /dashbox -->
 
+
+</div><!-- /col -->
 
 <style>
-.ak { background: #333; padding: 3px; margin: 3px 0; }
+.ak { background: #333; padding: 3px; margin: 3px 0; min-height: 30px; }
 .ak h3:first-line { font-size: 15pt; }
 .ak h3 { margin: 0; color: #fff; }
-.ak time { font-size: 20pt; }
+.ak time { font-size: 20pt;  position:absolute; width: 50px; margin-left: -50px; }
 .ak time small { font-size: 12pt; display: inline-block; vertical-align:top; }
-.ak span { float: right; font-size: 20pt; }
-.ak div {  }
-.dashbox { border-radius: 2px; background: #222; padding: 1%; margin: 10px 1% 10px 0; }
+.ak _span { float: right; font-size: 16pt; line-height: 1.2; text-align:right; width:50px }
+
+.di { position: absolute; margin-left: -44px; font-size: 30px; margin-top: 3px; width: 38px; text-align:center;  font-weight: normal; }
+.dashbox { border-radius: 2px; background: #222; padding: 5px 5px 5px 50px; margin: 10px 1% 10px 0; }
 .dashbox h2 { margin: 0 0 5px 0; }
+
 h2 big{display:block;font-size:180%}
 body{background:black;color:#ccc;}
 
 @media screen and (min-width: 900px) {
-.dashbox { width: 45%;  padding: 1%; margin: 10px 1% 10px 0; float: left; }
-.ak time { float: left; width: 60px; }
-.ak span { }
-.ak div { margin-left: 60px; }
+    .col-md-4 {width:32%; margin-right: 1%; float: left;}
+    
+    .dashbox { }
+    
 }
-/*
-@media screen and (min-width: 1300px) {
-.dashbox { width: 30%;  padding: 1%; margin: 10px 1% 10px 0; }
-}
-*/
+aside { font-size: 70%;}
 </style>
