--- a/oplan/templates/oplan/login.html
+++ b/oplan/templates/oplan/login.html
@@ -1,4 +1,6 @@
 {% extends 'oplan/header.html' %}
+
+
 {% block content %}
 
 {% if form.errors %}
@@ -16,20 +18,23 @@
 
 <form method="post" action="{% url 'django.contrib.auth.views.login' %}">
 {% csrf_token %}
-<table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
+<p>{{ form.username.label_tag }}
+    {{ form.username }}</p>
 
-<input type="submit" value="login" />
+
+    <p>{{ form.password.label_tag }}
+    {{ form.password }}</p>
+<p>
+<input type="submit" value="Anmelden" /></p>
 <input type="hidden" name="next" value="{{ next }}" />
 </form>
-<script> $("#id_username").focus() </script>
+<br>
+<p><a href="{% url 'password_reset' %}"><b>Falls du noch kein Passwort hast</b>, oder dein Passwort vergessen hast, 
+klicke hier, um es per Mail zurückzusetzen.</a></p>
 
+<script> $("#id_username").focus() </script>
+<style>
+label {display:block;font-weight:bold;padding: 2px 0 5px;}
+#id_username,#id_password{width:90%;max-width:300px;}
+</style>
 {% endblock %}
