changes during kif

--- a/eduroam/templates/eduroam/assign_account_result.html
+++ b/eduroam/templates/eduroam/assign_account_result.html
@@ -48,7 +48,7 @@
       <li>Anonyme Identität: anonymous@tu-darmstadt.de</li>
       <li>CA-Zertifikat (kann technisch gesehen ignoriert werden, für bessere Sicherheit aber dringend empfohlen): Root-Zertifikat der Deutsche Telekom CA2 herunterladen von <a href="https://www.pki.dfn.de/root/globalroot/">https://www.pki.dfn.de/root/globalroot/</a></li>
       <li>Innere Legitimierung: MSCHAPv2</li>
-      <li>Benutzername: {{ account.login }}@tu-darmstadt.de</li>
+      <li>Benutzername: {{ account.login }}</li>
       <li>Passwort: {{ account.password }}</li>
     </ul>
   </p>
