--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -31,7 +31,7 @@ oplan.is_staff = "{{user.is_staff}}";
 {% endblock %}
 
 
-{% block title %}{{ title }} | KIF Verwaltung{% endblock %}
+{% block title %}{{ title }} | KIFPLAN{% endblock %}
 
 {% block branding %}
 <h1 id="site-name">
