Use KIF465 instead of KIF440
TODO Use setting instead of hardcoded number

--- a/frontend/templates/frontend/autobeamer.html
+++ b/frontend/templates/frontend/autobeamer.html
@@ -23,7 +23,7 @@ window.onload=function(){
 
 <iframe src="http://kif.d120.de:3033/"></iframe>
 
-<iframe src="https://moerderspiel.org/view?id=kif440"></iframe>
+<iframe src="https://moerderspiel.org/view?id=KIF465"></iframe>
 
 </body>
 </html>
