Improved robustness, inserted default settings
GCM only sent when AUTH key is in settings
Prevent int/float conversion error

--- a/oplan/templates/admin/oplan/app_index.html
+++ b/oplan/templates/admin/oplan/app_index.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     {{ block.super }}
-    <p>Lorem ipsum dolor sit amet</p>
+    <p>Add documentation here...</p>
 {% endblock %}
 
 
