Use plan settings for beamer ak wall
Visible days are now selected based on settings
TODO Auto-hide days already over and still use the full space

--- a/oplan/templates/oplan/akwallbeamer.html
+++ b/oplan/templates/oplan/akwallbeamer.html
@@ -45,7 +45,7 @@ table tr:nth-child(even) { background:#e7e7e7; }
 </tr>
 {% for room in rooms %}
 <tr class=roomrow><td class=roomnumber>{{ room.number }}</td>
-{% for day,termine in days %}
+{% for day,termine, hours in days %}
 <td class=events>
     {% for t in termine %}{% if t.room.id == room.id %}
         <div class="event"
