remove broken image link from dashboard

--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -110,11 +110,7 @@ ul.buttons li a.Color-Yellow:hover {background: #f7d240 }
   <li>Im Zweifel die Entwickler des Systems fragen: luelistan und johnny für die KIF-Verwaltung, Fabian und Felix für die KDV. Beim OvD anrufen.</li>
 </ul>
 
-</div><div class="col-md-small">
-<p><center>
-<img src="https://kif.d120.de/kiflogo.jpg" style="width:300px;max-width:80%;" >
-</center></p>
-
+</div>
 <a name="news"></a>
 <h2>News</h2>
 
