--- a/oplan/templates/oplan/login.html
+++ b/oplan/templates/oplan/login.html
@@ -16,7 +16,7 @@
     {% endif %}
 {% endif %}
 
-<form method="post" action="{% url 'django.contrib.auth.views.login' %}">
+<form method="post">
 {% csrf_token %}
 <p>{{ form.username.label_tag }}
     {{ form.username }}</p>
