Add current time to AK wall

--- a/oplan/templates/oplan/akwallbeamer.html
+++ b/oplan/templates/oplan/akwallbeamer.html
@@ -30,6 +30,8 @@ table tr:nth-child(even) { background:#e7e7e7; }
 
 {% load l10n %}
 <div id="nowslider" style="left:{{nowsliderpos|unlocalize}}px;"></div>
+<div style="font-size:185%;position:absolute;top:0;right:0;background:teal;color:white;">&nbsp; {% now "l  H:i" %} &nbsp;</div>
+
 <table border="0" style="table-layout: fixed; width: 1000px; border-spacing: 0; ">
 <tbody>
 <tr><td style="width:100px;height:50px;"><div align=right>Tag/Uhrzeit</div>Räume</td>
