--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -35,7 +35,7 @@ oplan.is_staff = "{{user.is_staff}}";
 
 {% block branding %}
 <h1 id="site-name">
-  <a href="/"><i class="fa fa-bars mobile-only"></i><i class="fa fa-map mobile-hidden"></i>&nbsp;&nbsp;KIFPlan</a>
+  <a href="/index/"><i class="fa fa-bars mobile-only"></i><i class="fa fa-map mobile-hidden"></i>&nbsp;&nbsp;KIFPlan</a>
 </h1>
 {% endblock %}
 
